[gd_scene load_steps=30 format=4 uid="uid://iwmdjha67ofg"]

[ext_resource type="Script" uid="uid://nk223vigigyo" path="res://Scripts/main_menu.gd" id="1_22bbr"]
[ext_resource type="FontFile" uid="uid://bqrjk7kleqkfk" path="res://Fonts/Buka Bird.ttf" id="1_lujv5"]
[ext_resource type="FontFile" uid="uid://dl53om4vhamg0" path="res://Fonts/Heyam.ttf" id="1_mo4ht"]
[ext_resource type="TileSet" uid="uid://buyducg1cxv74" path="res://Asset/tileSet/FinalTileSet.tres" id="2_xqjxc"]
[ext_resource type="Texture2D" uid="uid://bee2wkfcj1mgk" path="res://Asset/CharacterSheet/Peng1_CharacerSheet.png" id="5_4836t"]
[ext_resource type="Texture2D" uid="uid://dgfu4f3kixt0d" path="res://Asset/CharacterSheet/Peng2_CharacerSheet.png" id="6_846ti"]
[ext_resource type="PackedScene" uid="uid://bqnf8iut8rcye" path="res://Prefab/Snowball.tscn" id="7_4y570"]
[ext_resource type="Script" uid="uid://d6agl3pken2k" path="res://GUI/Main_menu_ball.gd" id="7_846ti"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sdc87"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mo4ht"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 2
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lujv5"]
bg_color = Color(3.03224e-06, 0.725266, 0.206758, 1)
border_width_left = 5
border_width_top = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdc87"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_sdc87"]
font = ExtResource("1_mo4ht")
font_size = 70
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_4836t"]
atlas = ExtResource("5_4836t")
region = Rect2(0, 0, 27, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_846ti"]
atlas = ExtResource("5_4836t")
region = Rect2(27, 0, 27, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y570"]
atlas = ExtResource("5_4836t")
region = Rect2(54, 0, 27, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e5t4"]
atlas = ExtResource("5_4836t")
region = Rect2(81, 0, 27, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhrhj"]
atlas = ExtResource("5_4836t")
region = Rect2(108, 0, 27, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_52vv5"]
atlas = ExtResource("5_4836t")
region = Rect2(135, 0, 27, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_bguic"]
atlas = ExtResource("5_4836t")
region = Rect2(162, 0, 27, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_bc5wh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4836t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_846ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y570")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e5t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhrhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52vv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bguic")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_p5c4b"]
atlas = ExtResource("6_846ti")
region = Rect2(0, 0, 27, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6n8w"]
atlas = ExtResource("6_846ti")
region = Rect2(27, 0, 27, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfys4"]
atlas = ExtResource("6_846ti")
region = Rect2(54, 0, 27, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_p584u"]
atlas = ExtResource("6_846ti")
region = Rect2(81, 0, 27, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e2rn"]
atlas = ExtResource("6_846ti")
region = Rect2(108, 0, 27, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqsnc"]
atlas = ExtResource("6_846ti")
region = Rect2(135, 0, 27, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvnx2"]
atlas = ExtResource("6_846ti")
region = Rect2(162, 0, 27, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_hugu2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5c4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6n8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfys4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p584u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e2rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqsnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvnx2")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22bbr")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
position = Vector2(-100, 0)
scale = Vector2(1.4, 1.4)
tile_map_data = PackedByteArray("AAD4//z/AAAMAAsAAAD4//3/AAAMAAsAAAD4//7/AAAMAAsAAAD4////AAAMAAsAAAD4/wAAAAAMAAsAAAD4/wEAAAAMAAsAAAD4/wIAAAAMAAsAAAD4/wMAAAAMAAsAAAD4/wQAAAAMAAsAAAD5//z/AAAMAAsAAAD5//3/AAAMAAsAAAD5//7/AAAMAAsAAAD5////AAAMAAsAAAD5/wAAAAAMAAsAAAD5/wEAAAAMAAsAAAD5/wIAAAAMAAsAAAD5/wMAAAAMAAsAAAD5/wQAAAAMAAsAAAD6//z/AAAMAAsAAAD6//3/AAAMAAsAAAD6//7/AAAMAAsAAAD6////AAAMAAsAAAD6/wAAAAAMAAsAAAD6/wEAAAAMAAsAAAD6/wIAAAAMAAsAAAD6/wMAAAAMAAsAAAD6/wQAAAAMAAsAAAD7//z/AAAMAAsAAAD7//3/AAAMAAsAAAD7//7/AAAMAAsAAAD7////AAAMAAsAAAD7/wAAAAAMAAsAAAD7/wEAAAAMAAsAAAD7/wIAAAAMAAsAAAD7/wMAAAAMAAsAAAD7/wQAAAAMAAsAAAD8//z/AAAMAAsAAAD8//3/AAAMAAsAAAD8//7/AAAMAAsAAAD8////AAAMAAsAAAD8/wAAAAAMAAsAAAD8/wEAAAAMAAsAAAD8/wIAAAAMAAsAAAD8/wMAAAAMAAsAAAD8/wQAAAAMAAsAAAD9//z/AAAMAAsAAAD9//3/AAAMAAsAAAD9//7/AAAMAAsAAAD9////AAAMAAsAAAD9/wAAAAAMAAsAAAD9/wEAAAAMAAsAAAD9/wIAAAAMAAsAAAD9/wMAAAAMAAsAAAD9/wQAAAAMAAsAAAD+//z/AAAMAAsAAAD+//3/AAAMAAsAAAD+//7/AAAMAAsAAAD+////AAAMAAsAAAD+/wAAAAAMAAsAAAD+/wEAAAAMAAsAAAD+/wIAAAAMAAsAAAD+/wMAAAAMAAsAAAD+/wQAAAAMAAsAAAD///z/AAAMAAsAAAD///3/AAAMAAsAAAD///7/AAAMAAsAAAD/////AAAMAAsAAAD//wAAAAAMAAsAAAD//wEAAAAMAAsAAAD//wIAAAAMAAsAAAD//wMAAAAMAAsAAAD//wQAAAAMAAsAAAAAAPz/AAAMAAsAAAAAAP3/AAAMAAsAAAAAAP7/AAAMAAsAAAAAAP//AAAMAAsAAAAAAAAAAAAMAAsAAAAAAAEAAAAMAAsAAAAAAAIAAAAMAAsAAAAAAAMAAAAMAAsAAAAAAAQAAAAMAAsAAAABAPz/AAAMAAsAAAABAP3/AAAMAAsAAAABAP7/AAAMAAsAAAABAP//AAAMAAsAAAABAAAAAAAMAAsAAAABAAEAAAAMAAsAAAABAAIAAAAMAAsAAAABAAMAAAAMAAsAAAABAAQAAAAMAAsAAAACAPz/AAAMAAsAAAACAP3/AAAMAAsAAAACAP7/AAAMAAsAAAACAP//AAAMAAsAAAACAAAAAAAMAAsAAAACAAEAAAAMAAsAAAACAAIAAAAMAAsAAAACAAMAAAAMAAsAAAACAAQAAAAMAAsAAAADAPz/AAAMAAsAAAADAP3/AAAMAAsAAAADAP7/AAAMAAsAAAADAP//AAAMAAsAAAADAAAAAAAMAAsAAAADAAEAAAAMAAsAAAADAAIAAAAMAAsAAAADAAMAAAAMAAsAAAADAAQAAAAMAAsAAAAEAPz/AAAMAAsAAAAEAP3/AAAMAAsAAAAEAP7/AAAMAAsAAAAEAP//AAAMAAsAAAAEAAAAAAAMAAsAAAAEAAEAAAAMAAsAAAAEAAIAAAAMAAsAAAAEAAMAAAAMAAsAAAAEAAQAAAAMAAsAAAAFAPz/AAAMAAsAAAAFAP3/AAAMAAsAAAAFAP7/AAAMAAsAAAAFAP//AAAMAAsAAAAFAAAAAAAMAAsAAAAFAAEAAAAMAAsAAAAFAAIAAAAMAAsAAAAFAAMAAAAMAAsAAAAFAAQAAAAMAAsAAAAGAPz/AAAMAAsAAAAGAP3/AAAMAAsAAAAGAP7/AAAMAAsAAAAGAP//AAAMAAsAAAAGAAAAAAAMAAsAAAAGAAEAAAAMAAsAAAAGAAIAAAAMAAsAAAAGAAMAAAAMAAsAAAAGAAQAAAAMAAsAAAAHAPz/AAAMAAsAAAAHAP3/AAAMAAsAAAAHAP7/AAAMAAsAAAAHAP//AAAMAAsAAAAHAAAAAAAMAAsAAAAHAAEAAAAMAAsAAAAHAAIAAAAMAAsAAAAHAAMAAAAMAAsAAAAHAAQAAAAMAAsAAAAIAPz/AAAMAAsAAAAIAP3/AAAMAAsAAAAIAP7/AAAMAAsAAAAIAP//AAAMAAsAAAAIAAAAAAAMAAsAAAAIAAEAAAAMAAsAAAAIAAIAAAAMAAsAAAAIAAMAAAAMAAsAAAAIAAQAAAAMAAsAAAAJAPz/AAAMAAsAAAAJAP3/AAAMAAsAAAAJAP7/AAAMAAsAAAAJAP//AAAMAAsAAAAJAAAAAAAMAAsAAAAJAAEAAAAMAAsAAAAJAAIAAAAMAAsAAAAJAAMAAAAMAAsAAAAJAAQAAAAMAAsAAAD4//v/AAAMAAoAAAD5//v/AAAMAAoAAAD6//v/AAAMAAoAAAD7//v/AAAMAAoAAAD8//v/AAAMAAoAAAD9//v/AAAMAAoAAAD+//v/AAAMAAoAAAD///v/AAAMAAoAAAAAAPv/AAAMAAoAAAABAPv/AAAMAAoAAAACAPv/AAAMAAoAAAADAPv/AAAMAAoAAAAEAPv/AAAMAAoAAAAFAPv/AAAMAAoAAAAGAPv/AAAMAAoAAAAHAPv/AAAMAAoAAAAIAPv/AAAMAAoAAAAJAPv/AAAMAAoAAAA=")
tile_set = ExtResource("2_xqjxc")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-100, 0)
scale = Vector2(1.4, 1.4)
tile_map_data = PackedByteArray("AAD4/wUAAAAAAAgAAAD5/wUAAAAAAAgAAAD6/wUAAAACAAgAAAD7/wUAAAACAAYAAAD8/wUAAAACAAYAAAD9/wUAAAACAAYAAAD+/wUAAAACAAYAAAD//wUAAAACAAYAAAAAAAUAAAACAAYAAAABAAUAAAACAAYAAAACAAUAAAACAAYAAAADAAUAAAACAAYAAAAEAAUAAAACAAYAAAAFAAUAAAACAAYAAAAGAAUAAAACAAYAAAAHAAUAAAABAAgAAAAIAAUAAAAAAAcAAAAJAAUAAAAAAAgAAAAKAAUAAAAAAAYAAAAKAAQAAAAAAAgAAAAKAAMAAAAAAAcAAAAKAAIAAAAAAAYAAAAKAAEAAAAAAAcAAAAKAAAAAAAAAAgAAAAKAP//AAAAAAcAAAAKAP7/AAAAAAYAAAAKAP3/AAAAAAgAAAAKAPz/AAAAAAcAAAAKAPv/AAAAAAcAAAAKAPr/AAAAAAgAAAAJAPr/AAAAAAcAAAAIAPr/AAAAAAYAAAAHAPr/AAAAAAcAAAAGAPr/AAAAAAcAAAAFAPr/AAAAAAcAAAAEAPr/AAAAAAgAAAADAPr/AAAAAAcAAAACAPr/AAAAAAgAAAABAPr/AAAAAAgAAAAAAPr/AAAAAAYAAAD///r/AAAAAAgAAAD+//r/AAAAAAgAAAD9//r/AAAAAAgAAAD8//r/AAAAAAgAAAD7//r/AAAAAAcAAAD6//r/AAAAAAgAAAD5//r/AAAAAAYAAAD4//r/AAAAAAgAAAD3//r/AAAAAAcAAAD3//v/AAAAAAcAAAD3//z/AAAAAAYAAAD3//3/AAAAAAYAAAD3//7/AAAAAAYAAAD3////AAAAAAgAAAD3/wAAAAAAAAcAAAD3/wEAAAAAAAYAAAD3/wIAAAAAAAgAAAD3/wMAAAAAAAcAAAD3/wQAAAAAAAgAAAD3/wUAAAAAAAgAAAAJAAIAAAABAAcAAAAJAAMAAAABAAgAAAAGAP3/AAAFAAYAAAAHAP3/AAAGAAYAAAAIAP3/AAAGAAYAAAAJAP3/AAAHAAYAAAD6//3/AAAGAAYAAAD5//3/AAAGAAYAAAD4//3/AAAFAAYAAAAHAAQAAAABAAcAAAAIAAQAAAABAAgAAAAIAAMAAAABAAcAAAAJAAQAAAAAAAYAAAD3/wYAAAAAAAgAAAD4/wYAAAAAAAcAAAD5/wYAAAAAAAgAAAD6/wYAAAAAAAgAAAD7/wYAAAAAAAYAAAD8/wYAAAAAAAYAAAD9/wYAAAAAAAgAAAD+/wYAAAAAAAgAAAAGAAYAAAAAAAYAAAAHAAYAAAAAAAcAAAAIAAYAAAAAAAgAAAAJAAYAAAAAAAYAAAAKAAYAAAAAAAcAAAAFAAYAAAAAAAgAAAAEAAYAAAAAAAgAAAADAAYAAAAAAAcAAAACAAYAAAAAAAcAAAABAAYAAAAAAAcAAAAAAAYAAAAAAAcAAAD//wYAAAAAAAYAAAD5//z/AAAJAAcAAAAHAPz/AAALAAcAAAD2/wYAAAAAAAgAAAD2/wUAAAAAAAgAAAD2/wQAAAAAAAcAAAD2/wMAAAAAAAcAAAD2/wIAAAAAAAYAAAD2/wEAAAAAAAgAAAD2/wAAAAAAAAgAAAD2////AAAAAAYAAAD2//7/AAAAAAYAAAD2//3/AAAAAAcAAAD2//z/AAAAAAgAAAD2//v/AAAAAAgAAAD2//r/AAAAAAcAAAALAAYAAAAAAAYAAAALAAUAAAAAAAcAAAALAAQAAAAAAAcAAAALAAMAAAAAAAgAAAALAAIAAAAAAAYAAAALAAEAAAAAAAgAAAALAAAAAAAAAAgAAAALAP//AAAAAAgAAAALAP7/AAAAAAYAAAALAP3/AAAAAAgAAAALAPz/AAAAAAcAAAALAPv/AAAAAAgAAAALAPr/AAAAAAcAAAD6/wQAAAACAAcAAAD5/wMAAAACAAcAAAD4/wIAAAACAAcAAAD5/wQAAAACAAgAAAD4/wMAAAACAAgAAAD4/wQAAAAAAAcAAAD7//3/AAAHAAYAAAA=")
tile_set = ExtResource("2_xqjxc")

[node name="ImageBG" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxTexture_sdc87")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.0
offset_top = -180.0
offset_right = 242.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_lujv5")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_mo4ht")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lujv5")
theme_override_styles/normal = SubResource("StyleBoxFlat_sdc87")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_lujv5")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_mo4ht")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lujv5")
theme_override_styles/normal = SubResource("StyleBoxFlat_sdc87")
text = "Admin"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_lujv5")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_mo4ht")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lujv5")
theme_override_styles/normal = SubResource("StyleBoxFlat_sdc87")
text = "Options"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_lujv5")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_mo4ht")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lujv5")
theme_override_styles/normal = SubResource("StyleBoxFlat_sdc87")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -328.0
offset_right = 200.0
offset_bottom = -259.0
grow_horizontal = 2
grow_vertical = 2
text = "Penguins Escape"
label_settings = SubResource("LabelSettings_sdc87")

[node name="Snowball" parent="." instance=ExtResource("7_4y570")]
position = Vector2(0, 284)
limit_height = 10000

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-514, -349)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_bc5wh")
frame_progress = 0.223899
script = ExtResource("7_846ti")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(495, -345)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_hugu2")
frame_progress = 0.301205
flip_h = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_Options_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Exit_pressed"]
